# innate-keepthem

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  USAGE.md  docker-compose.yml
.task/checksum/: cli-build
docs/: Agents.md  README.md  index.md
docs/cases/: 1-single-video-download.md  2-concurrent-batch-download.md  3-vtt-analyze.md  AI时代动词-自主调研报告.md  AI的正确打开方式-深度分析报告.md  Superlinear课程分析.md  人AI边界-深度调研.md
docs/features/: index.md
docs/how-to/: README.md  setup.ps1  setup.sh  yt-dlp-ffmpeg-guide.md
docs/quick-start/: index.md
docs/spec/: index.md
docs/tips/: index.md
docs/usage/: index.md
tasks/: url-extractor.md  vtt-analysis-spec.md  vtt-analysis.md  yt-dl.md
tasks/analysis/: desktoplize-analysis.md  desktoplize-implementation-plan.md  desktoplize-summary.md  page-agent-integration-analysis.md
tasks/features/: BUILD.md  DEBUG.md  DEVELOPMENT.md  README.md  desktop-ai-summary.md  (+16 more)
url-extractor/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
vYtDL/: .gitignore  USAGE.md  batch_download.py  config.json  download_record.json  go.mod  go.sum  main.go  subtitle_mapping.json  urls.txt  vYtDL
vYtDL-desktop/: Dockerfile  package.json
vYtDL-desktop/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
vYtDL-desktop/apps/desktop/src-tauri/capabilities/: default.json
vYtDL-desktop/apps/desktop/src-tauri/icons/: README.md  icon.icns
vYtDL-desktop/apps/desktop/src-tauri/src/: audio_extractor.rs  commands.rs  database.rs  downloader.rs  lib.rs  main.rs  queue.rs
vYtDL-desktop/apps/desktop/src-tauri/tests/: download_test.rs
(+236 files in other folders)
