[package]
name = "vytdl-desktop"
version = "0.1.0"
description = "vYtDL Desktop - Video Downloader"
authors = ["vYtDL"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vytdl_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
dirs = "5"
glob = "0.3"
opener = "0.6"
